--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,23 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="30dp"
-    tools:context=".MainActivity">
+    tools:context=".activities.SplashActivity">
 
     <fragment
         android:id="@+id/info_bar"
-        android:name="com.firstventuresgroup.dailychallenges.ui.InfoBarFragment"
+        android:name="com.firstventuresgroup.dailychallenges.fragments.InfoBarFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <fragment
         android:id="@+id/challenge_card"
-        android:name="com.firstventuresgroup.dailychallenges.ui.ChallengeFragment"
+        android:name="com.firstventuresgroup.dailychallenges.fragments.ChallengeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <fragment
         android:id="@+id/button_bar"
-        android:name="com.firstventuresgroup.dailychallenges.ui.ButtonBarFragment"
+        android:name="com.firstventuresgroup.dailychallenges.fragments.ButtonBarFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
