--- a/app/src/main/res/layout/fragment_button_bar.xml
+++ b/app/src/main/res/layout/fragment_button_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="25dp">
@@ -8,19 +8,19 @@
         android:id="@+id/skip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingStart="0dp"
-        android:paddingEnd="10dp"
-        android:text="@string/skip_label"
-        style="?android:attr/borderlessButtonStyle" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/rounded_buttons"
+        android:text="@string/skip_label" />
+
 
     <Button
         android:id="@+id/complete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
-        android:text="@string/complete_label"
-        style="?android:attr/borderlessButtonStyle" />
-</LinearLayout>
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="25dp"
+        android:layout_toEndOf="@+id/skip_button"
+        android:background="@drawable/rounded_buttons"
+        android:text="@string/complete_label" />
+
+</RelativeLayout>
