Created new activity for read more section Added scroll view

--- a/app/src/main/res/layout/activity_read_more.xml
+++ b/app/src/main/res/layout/activity_read_more.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
-            android:background="@color/screenBackground"
+            android:background="@color/readMoreBackground1"
             android:orientation="vertical"
             android:paddingBottom="30dp">
 
