--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -19,7 +19,7 @@
             android:id="@+id/challengeCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Personal Wellbeing"
+            android:text="@string/challenge_category"
             android:textAlignment="center"
             android:textSize="15sp" />
 
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Write a paragraph picturing your life in five years"
+            android:text="@string/challenge_title"
             android:textAlignment="center"
             android:textSize="22sp"
             android:textStyle="bold" />
