--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="screenBackground">#50C864</color>
     <color name="button_color">#E6C53C</color>
     <color name="button_grad_end">#F7D651</color>
+    <color name="readMoreBackground1">#40F6F1D0</color>
 </resources>
