--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,35 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/screenBackground"
-    android:gravity="center"
-    android:padding="30dp"
-    tools:context=".activities.SplashActivity">
+    android:layout_height="match_parent">
 
     <fragment
-        android:id="@+id/info_bar"
-        android:name="com.okomilabs.dailychallenges.fragments.InfoBarFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp" />
-
-    <fragment
-        android:id="@+id/challenge_card"
+        android:id="@+id/challenge"
         android:name="com.okomilabs.dailychallenges.fragments.ChallengeFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_bar"
-        android:layout_below="@+id/info_bar"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp" />
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_challenge" />
 
-    <fragment
-        android:id="@+id/button_bar"
-        android:name="com.okomilabs.dailychallenges.fragments.ButtonBarFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp" />
 </RelativeLayout>
