--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -31,7 +31,7 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/category_image"
             android:layout_width="match_parent"
             android:layout_height="113dp"
             android:layout_marginTop="30dp"
@@ -40,7 +40,7 @@
             app:srcCompat="@drawable/personalwellbeing" />
 
         <TextView
-            android:id="@+id/challenge_introduction"
+            android:id="@+id/challenge_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -50,7 +50,6 @@
             android:textSize="16sp" />
 
         <ImageView
-            android:id="@+id/down_arrow"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginTop="60dp"
@@ -66,7 +65,6 @@
             android:paddingBottom="30dp">
 
             <TextView
-                android:id="@+id/challenge_overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -77,7 +75,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/challenge_description"
+                android:id="@+id/challenge_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -86,7 +84,6 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/link_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
