Added content description to icon

--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -50,6 +50,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:contentDescription="@string/icon_desc"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginTop="60dp"
