--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -16,7 +16,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:paddingHorizontal="20dp"
-            android:text="Challenge Category"
             android:textSize="16sp" />
 
         <TextView
@@ -25,7 +24,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:paddingHorizontal="20dp"
-            android:text="Challenge Title"
             android:textColor="@android:color/black"
             android:textSize="32sp"
             android:textStyle="bold" />
@@ -35,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="113dp"
             android:layout_marginTop="30dp"
-            android:contentDescription="personal_image"
+            android:contentDescription="@string/icon_desc"
             android:paddingHorizontal="20dp"
             app:srcCompat="@drawable/personalwellbeing" />
 
@@ -45,17 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:paddingHorizontal="20dp"
-            android:text="Challenge Summary"
-            android:textColor="@color/cardview_dark_background"
+            android:textColor="@color/lightGray"
             android:textSize="16sp" />
-
-        <ImageView
-            android:contentDescription="@string/icon_desc"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="60dp"
-            android:paddingHorizontal="20dp"
-            app:srcCompat="@android:drawable/arrow_down_float" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,7 +70,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:paddingHorizontal="20dp"
-                android:text="Challenge Description"
                 android:textSize="16sp" />
 
             <TextView
@@ -89,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:paddingHorizontal="20dp"
-                android:text="Useful Links"
+                android:text="@string/links_label"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
