--- a/app/src/main/res/layout/button_bar.xml
+++ b/app/src/main/res/layout/button_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="25dp">
@@ -11,7 +12,6 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/rounded_buttons"
         android:text="@string/skip_label" />
-
 
     <Button
         android:id="@+id/complete_button"
