--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/challenge_card"
     android:layout_width="match_parent"
@@ -31,5 +32,6 @@
             android:textAlignment="center"
             android:textSize="22sp"
             android:textStyle="bold" />
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
