--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -91,7 +92,7 @@
                 android:text="links"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
-        </LinearLayout>
 
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
