--- a/app/src/main/res/layout/info_bar.xml
+++ b/app/src/main/res/layout/info_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -49,6 +50,6 @@
             android:layout_height="wrap_content"
             android:text="3"
             android:textSize="16sp" />
-    </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
