--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/challenge_fragment" >
+    app:startDestination="@id/challenge_fragment">
 
     <fragment
         android:id="@+id/challenge_fragment"
         android:name="com.okomilabs.dailychallenges.fragments.ChallengeFragment"
         android:label="fragment_challenge">
+
         <action
             android:id="@+id/challenge_to_read_more"
             app:destination="@id/read_more_fragment" />
-
     </fragment>
 
     <fragment
         android:id="@+id/read_more_fragment"
-        android:name="com.okomilabs.dailychallenges.fragments.ReadMoreFragment" >
+        android:name="com.okomilabs.dailychallenges.fragments.ReadMoreFragment">
+
         <action
             android:id="@+id/read_more_to_challenge"
             app:destination="@id/challenge_fragment" />
@@ -25,7 +27,6 @@
             app:argType="string[]"
             app:nullable="true"
             android:defaultValue="@null" />
-
     </fragment>
 
 </navigation>
