--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/challenge_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:textAlignment="center"
-    card_view:cardBackgroundColor="@color/lightGray"
-    card_view:cardCornerRadius="15dp"
-    card_view:cardElevation="15dp"
-    card_view:contentPadding="30dp">
+    android:transitionName="card_element"
+    app:cardBackgroundColor="@color/lightGray"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="15dp">
 
     <RelativeLayout
+        android:id="@+id/heading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_margin="30dp">
 
         <TextView
             android:id="@+id/challenge_category"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="15sp" />
+            android:layout_above="@id/challenge_title"
+            android:layout_centerHorizontal="true"
+            android:textSize="15sp"
+            android:transitionName="category_element" />
 
         <TextView
             android:id="@+id/challenge_title"
@@ -31,7 +33,8 @@
             android:layout_centerInParent="true"
             android:textAlignment="center"
             android:textSize="22sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
+            android:textStyle="bold"
+            android:transitionName="title_element"/>
 
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
