--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -1,59 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/challenge_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:transitionName="card_element">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/challenge_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingHorizontal="20dp"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/challenge_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingHorizontal="20dp"
-            android:textColor="@android:color/black"
-            android:textSize="32sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/category_image"
-            android:layout_width="match_parent"
-            android:layout_height="113dp"
-            android:layout_marginTop="30dp"
-            android:contentDescription="@string/icon_desc"
-            android:paddingHorizontal="20dp"
-            app:srcCompat="@drawable/personalwellbeing" />
-
-        <TextView
-            android:id="@+id/challenge_summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:paddingHorizontal="20dp"
-            android:textColor="@color/lightGray"
-            android:textSize="16sp" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:background="@color/readMoreBackground1"
-            android:orientation="vertical"
-            android:paddingBottom="30dp">
+            android:layout_margin="18dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/challenge_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:transitionName="category_element" />
+
+            <TextView
+                android:id="@+id/challenge_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:transitionName="title_element"/>
+
+            <ImageView
+                android:id="@+id/category_image"
+                android:layout_width="match_parent"
+                android:layout_height="113dp"
+                android:layout_marginTop="30dp"
+                android:contentDescription="@string/icon_desc"
+                android:paddingHorizontal="20dp"
+                app:srcCompat="@drawable/personal_wellbeing" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -64,6 +52,15 @@
                 android:textColor="@android:color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/challenge_summary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:paddingHorizontal="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/challenge_desc"
@@ -92,8 +89,10 @@
                 android:text="links"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
+
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
+</androidx.cardview.widget.CardView>
+
