Added text and gradient

--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -43,16 +43,40 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:paddingHorizontal="20dp"
-            android:textColor="@color/lightGray"
+            android:textColor="@android:color/secondary_text_dark"
             android:textSize="16sp" />
+        <TextView
+            android:id="@+id/read_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="120dp"
+            android:text="Read More"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/down_arrow"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="30dp"
+            android:paddingHorizontal="20dp"
+            app:srcCompat="@android:drawable/arrow_down_float" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
-            android:background="@color/readMoreBackground1"
+            android:background="@color/screenBackground"
             android:orientation="vertical"
             android:paddingBottom="30dp">
+
+            <View
+                android:id="@+id/gradient"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/green_gradient" />
 
             <TextView
                 android:layout_width="match_parent"
