--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,17 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/actionBarPrimary</item>
         <item name="colorPrimaryDark">@color/actionBarSecondary</item>
         <item name="titleTextColor">@android:color/white</item>
+        <item name="android:windowBackground">@color/screenBackground</item>
     </style>
 
-    <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!-- Unused Theme for Read More page -->
+    <style name="ReadMoreTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@color/actionBarSecondary</item>
         <item name="titleTextColor">@android:color/black</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/screenBackground</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
