--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-    <!-- Base application theme. -->
+    <!--  Base application theme  -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/actionBarPrimary</item>
         <item name="colorPrimaryDark">@color/actionBarSecondary</item>
@@ -7,15 +7,112 @@
         <item name="android:windowBackground">@color/screenBackground</item>
     </style>
 
-    <!-- Unused Theme for Read More page -->
+    <!--  Unused Theme for Read More page  -->
     <style name="ReadMoreTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@color/actionBarSecondary</item>
         <item name="titleTextColor">@android:color/black</item>
     </style>
 
+    <!--  Splash screen theme  -->
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
+
+    <!--  Style for challenge card  -->
+    <style name="ChallengeCard">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+
+        <item name="cardBackgroundColor">@color/lightGray</item>
+        <item name="cardCornerRadius">15dp</item>
+        <item name="cardElevation">15dp</item>
+    </style>
+
+    <!--  Style for bold text views  -->
+    <style name="BoldHeading">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:color">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!--  Style for text views in the detail section of read more page  -->
+    <style name="DetailHeading">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+
+        <item name="android:color">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!--  Style for any smaller text  -->
+    <style name="SubText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <!--  Style for category icon on read more page  -->
+    <style name="CategoryIcon">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">113dp</item>
+
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginBottom">30dp</item>
+
+        <item name="contentDescription">@string/category_icon_desc</item>
+    </style>
+
+    <!--  Style for arrow icon on read more page  -->
+    <style name="ArrowIcon">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">20dp</item>
+
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+
+        <item name="contentDescription">@string/arrow_icon_desc</item>
+    </style>
+
+    <!--  Layout style for vertical linear layouts  -->
+    <style name="VerticalLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <!--  Layout style for challenge page  -->
+    <style name="ChallengeLayout" parent="MatchHeight">
+        <item name="android:paddingLeft">30dp</item>
+        <item name="android:paddingRight">30dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <!--  Layout style for read more page  -->
+    <style name="ReadMoreLayout" parent="VerticalLayout">
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">18dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">20dp</item>
+    </style>
+
+    <!--  Style for views to fill the whole screen  -->
+    <style name="MatchHeight">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <!--  Style for views to be contained within itself  -->
+    <style name="WrapAll">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
 </resources>
