--- a/app/src/main/res/layout/read_more_detail.xml
+++ b/app/src/main/res/layout/read_more_detail.xml
@@ -1,43 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingHorizontal="18dp"
-    android:paddingVertical="20dp"
-    android:background="@color/screenBackground">
+    android:background="@color/screenBackground"
+    style="@style/ReadMoreLayout">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/overview_label"
-        android:textColor="@android:color/black"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:color="@android:color/black"
+        style="@style/DetailHeading" />
 
     <TextView
         android:id="@+id/challenge_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textSize="16sp" />
+        style="@style/SubText" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:text="@string/links_label"
-        android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:color="@android:color/black"
+        style="@style/DetailHeading" />
 
     <TextView
         android:id="@+id/links"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="16sp" />
+        style="@style/SubText" />
 
 </LinearLayout>
