--- a/app/src/main/res/layout/read_more_summary.xml
+++ b/app/src/main/res/layout/read_more_summary.xml
@@ -2,41 +2,27 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginHorizontal="18dp">
+    style="@style/ReadMoreLayout">
 
     <TextView
         android:id="@+id/challenge_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:transitionName="category_element" />
+        android:transitionName="category_element"
+        style="@style/SubText" />
 
     <TextView
         android:id="@+id/challenge_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="textStart"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:transitionName="title_element" />
+        android:transitionName="title_element"
+        android:textSize="27sp"
+        style="@style/BoldHeading" />
 
     <ImageView
         android:id="@+id/category_image"
-        android:layout_width="match_parent"
-        android:layout_height="113dp"
-        android:layout_marginTop="30dp"
-        android:contentDescription="@string/category_icon_desc"
-        android:paddingHorizontal="20dp"
-        app:srcCompat="@drawable/personal_wellbeing" />
+        app:srcCompat="@drawable/personal_wellbeing"
+        style="@style/CategoryIcon" />
 
     <TextView
         android:id="@+id/challenge_summary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/secondary_text_dark"
-        android:textSize="16sp" />
+        android:color="@android:color/secondary_text_dark"
+        style="@style/SubText" />
 
 </LinearLayout>
