--- a/app/src/main/res/layout/challenge_button_bar.xml
+++ b/app/src/main/res/layout/challenge_button_bar.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="25dp">
+    style="@style/MatchHeight">
 
     <Button
         android:id="@+id/skip_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:background="@drawable/rounded_buttons"
-        android:text="@string/skip_label" />
+        android:text="@string/skip_label"
+        style="@style/WrapAll" />
 
     <Button
         android:id="@+id/complete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="25dp"
         android:layout_toEndOf="@+id/skip_button"
+        android:layout_marginStart="25dp"
         android:background="@drawable/rounded_buttons"
-        android:text="@string/complete_label" />
+        android:text="@string/complete_label"
+        style="@style/WrapAll" />
 
 </RelativeLayout>
