--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    style="@style/ChallengeLayout">
 
     <include
-        layout="@layout/challenge_card"
         android:id="@+id/challenge_card"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:layout_centerVertical="true"
-        android:layout_above="@+id/button_bar"
-        android:layout_marginVertical="15dp"
-        android:layout_marginHorizontal="30dp" />
+        android:layout_centerInParent="true"
+        layout="@layout/challenge_card"/>
 
     <include
-        layout="@layout/button_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:layout_below="@id/challenge_card"
-        android:layout_marginHorizontal="30dp" />
+        layout="@layout/challenge_button_bar" />
 
 </RelativeLayout>
